[package]
name = "randscape-api"
version = "0.3.1"
edition = "2021"
description = "Landscape API command in Rust"
license = "Apache 2.0"
authors = [ "aleksandar.miljkovic@iodream.com", ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#base64 = "0.21.2"
base64 = "0.5.2"
cargo-deb = "1.44.0"
chrono = { version = "0.4.26", default-features = false, features = ["clock", "std", "wasmbind"] }
dotenvy = "0.15.7"
hmac = "0.12.1"
minreq = { version = "2.8.1", features = ["https", "json-using-serde"] }
serde = "1.0.164"
serde_derive = "1.0.164"
serde_json = "1.0.116"
sha2 = "0.10.6"
structopt = "0.3.26"
url = "2.4.0"
